gitops-main/base/services/payment-service/deployment.yaml
apiVersion: apps/v1  
kind: Deployment     
metadata:
  name: payment-service            
  namespace: payment-service       
  labels:
    app: payment-service            

spec:
  revisionHistoryLimit: 2          
  replicas: 2  

# Denne Deployment styrer alle pods, der har app=payment-service som label
  selector:                        
    matchLabels:
      app: payment-service

# Pod template – beskriver hvordan hver pod skal se ud
  template:                        
    metadata:
      labels:
        app: payment-service    

  # Security context for pod
    spec:
      securityContext:             
        runAsNonRoot: true         
        runAsUser: 1001            
        runAsGroup: 1001           
        fsGroup: 1001              

      imagePullSecrets:            
        - name: gitlab-registry-secret

      containers:
        - name: payment-service
          image: registry.gitlab.au.dk/swwao/f2025/exams-projects/group-7/paymentservice:v1.16

          ports:
            - containerPort: 8080  

          # Security context for container
          securityContext:                    
            privileged: false                 
            allowPrivilegeEscalation: false   
            capabilities:
              drop:
                - ALL     # Fjerner alle ekstra rettigheder fra containeren

          readinessProbe:          
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:           
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 15   
            periodSeconds: 20         
            failureThreshold: 5   
                
          # Ressourcebegrænsninger for containeren
          resources:              
            requests:
              cpu: "30m"          # Minimum CPU pod’en forventer at bruge (30 millicores)
              memory: "64Mi"      # Minimum RAM den forventer
            limits:
              cpu: "100m"         # Maks CPU (100 millicores)
              memory: "128Mi"     # Maks RAM
