gitops-main/base/services/payment-service/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: payment-service
spec:
  podSelector: {} # Apply to all pods in the payment-service namespace
  policyTypes:
    - Ingress  
    - Egress
